# cyclops

./: .gitignore  .gitmodules  CMakeLists.txt  DownloadRepos.sh  InstallEdgeTPU.sh  InstallOpenCV.sh  InstallRequirement.sh  InstallRequirementDebian.sh  InstallRequirementFedora.sh  InstallService.sh  UninstallService.sh  advertisement_test.py  cyclops.service  json_tcp_test.py  readme.md
assets/: board.blend  virtualcalibration.blend
assets/blender/: board.blend  toptracker.blend  yolo.blend
assets/blender/2025/: can.blend  plank.blend
assets/dnn/: .gitignore  cdfr.cfg  cdfr.names
assets/shaders/: vertexshader.vs
calibration/: 3D_Global_Shutter_Camera_3D_Gl.json  Arducam_12MP_USB_Camera_Arduca.json
include/: GlobalConf.hpp  ObjectTracker.hpp  math2d.hpp  math3d.hpp
include/ArucoPipeline/: ArucoTypes.hpp  ObjectIdentity.hpp  ObjectTracker.hpp  SolarPanel.hpp  StaticObject.hpp  TopTracker.hpp  TrackedObject.hpp  TrackerCube.hpp
include/Cameras/: Calibfile.hpp  Camera.hpp  CameraManager.hpp  CameraManagerSimulation.hpp  CameraManagerV4L2.hpp  FakeCamera.hpp  ImageSource.hpp  ImageTypes.hpp  VideoCaptureCamera.hpp
include/Communication/: AdvertiseMV.hpp  DataSender.hpp  JsonListener.hpp  ProcessedTypes.hpp  TCPJsonHost.hpp
include/Communication/Encoders/: GenericEncoder.hpp  MinimalEncoder.hpp  TextEncoder.hpp
include/Communication/Transport/: FileTransport.hpp  GenericTransport.hpp  SerialTransport.hpp  TCPTransport.hpp  UDPTransport.hpp
include/DetectFeatures/: ArucoDetect.hpp  ColorDetect.hpp  StereoDetect.hpp  YoloDetect.hpp
include/EntryPoints/: CDFRCommon.hpp  CDFRExternal.hpp  CDFRInternal.hpp  Calibrate.hpp  Mapping.hpp
include/Misc/: ArucoDictSize.hpp  FrameCounter.hpp  GlobalConf.hpp  ManualProfiler.hpp  MatToJSON.hpp  math2d.hpp  math3d.hpp  metadata.hpp  path.hpp
include/Oogway/: LinearMovement.hpp
include/Oogway/Collision/: Pathfinder.hpp  Vector2d.hpp
include/PostProcessing/: Jardinieres.hpp  PostProcess.hpp  SolarPanel.hpp  StockPlants.hpp  Template.hpp  YoloDeflicker.hpp  ZoneWatcher.hpp
include/Scenarios/: CDFRCommon.hpp
include/SiftPipeline/: SiftTest.hpp
include/TrackedObjects/: TrackedObject.hpp
include/Visualisation/: BoardGL.hpp  GLWindow.hpp  ImguiWindow.hpp  OpenGLTask.hpp  imguiconfig.hpp
include/Visualisation/openGL/: Mesh.hpp  Texture.hpp
include/data/: CameraView.hpp  ImageTypes.hpp  ManualProfiler.hpp  OutputImage.hpp
include/data/senders/: AdvertiseMV.hpp  DataSender.hpp
include/data/senders/Encoders/: GenericEncoder.hpp  MinimalEncoder.hpp  TextEncoder.hpp
include/data/senders/Transport/: FileTransport.hpp  GenericTransport.hpp  SerialTransport.hpp  TCPTransport.hpp  UDPTransport.hpp
include/visualisation/: BoardGL.hpp  ImguiWindow.hpp
sim/: calreal.yaml  calsim.yaml  rec0.json  rec1.json  robotronik.json  scenario0.json  sim0.json
sim/cogip/: calibration.json  scenario.json
source/: Calibrate.cpp  ObjectTracker.cpp  main.cpp  mapping.cpp  math2d.cpp  math3d.cpp
source/ArucoPipeline/: ObjectIdentity.cpp  ObjectTracker.cpp  SolarPanel.cpp  StaticObject.cpp  TopTracker.cpp  TrackedObject.cpp  TrackerCube.cpp  mapping.cpp
source/Cameras/: Calibfile.cpp  Camera.cpp  CameraManager.cpp  CameraManagerSimulation.cpp  CameraManagerV4L2.cpp  CameraView.cpp  FakeCamera.cpp  ImageSource.cpp  ImageTypes.cpp  OutputImage.cpp  VideoCaptureCamera.cpp
source/Communication/: AdvertiseMV.cpp  DataSender.cpp  JsonListener.cpp  ProcessedTypes.cpp  SpecJson.md  TCPJsonHost.cpp
source/Communication/Encoders/: GenericEncoder.cpp  MinimalEncoder.cpp  TextEncoder.cpp
source/Communication/Transport/: FileTransport.cpp  GenericTransport.cpp  SerialTransport.cpp  TCPTransport.cpp  UDPTransport.cpp
source/DetectFeatures/: ArucoDetect.cpp  ColorDetect.cpp  StereoDetect.cpp  YoloDetect.cpp
source/EntryPoints/: CDFRCommon.cpp  CDFRExternal.cpp  CDFRInternal.cpp  Calibrate.cpp  Mapping.cpp
source/Misc/: FrameCounter.cpp  Globalconf.cpp  ManualProfiler.cpp  MatToJSON.cpp  Task.cpp  math2d.cpp  math3d.cpp  metadata.cpp  path.cpp
source/Oogway/: LinearMovement.cpp
source/Oogway/Collision/: Pathfinder.cpp  Vector2d.cpp
source/PostProcessing/: Jardinieres.cpp  PostProcess.cpp  SolarPanel.cpp  StockPlants.cpp  Template.cpp  YoloDeflicker.cpp  ZoneWatcher.cpp
source/SiftPipeline/: SiftTest.cpp
source/TrackedObjects/: StaticObject.cpp  TrackedObject.cpp
source/Visualisation/: BoardGL.cpp  GLWindow.cpp  ImguiWindow.cpp  OpenGLTask.cpp
source/Visualisation/openGL/: Mesh.cpp  Shader.cpp  Texture.cpp
source/data/: FrameCounter.cpp  ImageTypes.cpp  ManualProfiler.cpp  OutputImage.cpp
source/data/senders/: AdvertiseMV.cpp  DataSender.cpp
source/data/senders/Encoders/: MinimalEncoder.cpp  TextEncoder.cpp
source/data/senders/Transport/: FileTransport.cpp  GenericTransport.cpp  SerialTransport.cpp  TCPTransport.cpp  UDPTransport.cpp
source/scenarios/: CDFRCommon.cpp  CDFRExternal.cpp  CDFRInternal.cpp
source/visualisation/: BoardGL.cpp  ImguiWindow.cpp
source/visualisation/openGL/: Mesh.cpp  Texture.cpp
